Autenticacao do Usuario, geracao de tokenjwt

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,6 +12,8 @@ spring:
       hibernate:
         jdbc:
           time_zone: America/Sao_Paulo
+jwt:
+  secret: smarkhisv1
 
 server:
   port: 8081
